[package]
name = "vector_2d_3d"
version = "0.5.0"
edition = "2021"
description = "Simple small library for 2D and 3D vectors"
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"