[package]
name = "vector_2d_3d"
version = "0.5.1"
edition = "2021"
description = "Simple small library for 2D and 3D vectors"
license = "MIT"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
deprecated = "This crate is deprecated. Please use `minmath` instead."

[dependencies]
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"